[package]
name = "merino"
version = "0.1.4"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
snafu = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
bencher = "0.1"
